--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
    <parent>
       <groupId>org.infinispan</groupId>
       <artifactId>infinispan-cachestore-parent</artifactId>
-      <version>6.0.0-SNAPSHOT</version>
+      <version>6.0.0.Alpha4-redhat-1</version>
       <relativePath />
    </parent>
    <artifactId>infinispan-cachestore-rest</artifactId>
@@ -42,6 +42,10 @@
       <dependency>
          <groupId>${project.groupId}</groupId>
          <artifactId>infinispan-core</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>commons-httpclient</groupId>
+         <artifactId>commons-httpclient</artifactId>
       </dependency>
       <dependency>
          <groupId>${project.groupId}</groupId>
